--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,53 @@
+@article {MR4683610,
+    AUTHOR = {Arora, Anita and Ayyer, Arvind},
+     TITLE = {The monopole-dimer model on {C}artesian products of plane
+              graphs},
+   JOURNAL = {Comb. Theory},
+  FJOURNAL = {Combinatorial Theory},
+    VOLUME = {3},
+      YEAR = {2023},
+    NUMBER = {3},
+     PAGES = {Paper No. 3, 29},
+      ISSN = {2766-1334},
+   MRCLASS = {82B20 (05A15 05C70)},
+  MRNUMBER = {4683610},
+       DOI = {10.5070/c63362786},
+       URL = {https://doi.org/10.5070/c63362786},
+}
+
+@article {MR4676938,
+    AUTHOR = {Sau, Gobinda},
+     TITLE = {Existence of a harmonic map from {$\Bbb C$} to {$\Bbb H^2$}
+              with prescribed {H}opf differential},
+   JOURNAL = {Math. Student},
+  FJOURNAL = {The Mathematics Student},
+    VOLUME = {92},
+      YEAR = {2023},
+    NUMBER = {3-4},
+     PAGES = {113--139},
+      ISSN = {0025-5742},
+   MRCLASS = {53C43 (53C21 58E20)},
+  MRNUMBER = {4676938},
+       DOI = {10.1016/0167-2789(95)00302-9},
+       URL = {https://doi.org/10.1016/0167-2789(95)00302-9},
+}
+
+@article {MR4676935,
+    AUTHOR = {Pingali, Vamsi Pritham},
+     TITLE = {Physics helping mathematics: a couple of examples},
+   JOURNAL = {Math. Student},
+  FJOURNAL = {The Mathematics Student},
+    VOLUME = {92},
+      YEAR = {2023},
+    NUMBER = {3-4},
+     PAGES = {89--94},
+      ISSN = {0025-5742},
+   MRCLASS = {30C20 (31A15 78A25)},
+  MRNUMBER = {4676935},
+       DOI = {10.1007/s11075-022-01381-0},
+       URL = {https://doi.org/10.1007/s11075-022-01381-0},
+}
+
 @article {MR4676918,
 AUTHOR = {Khare, Apoorva},
 TITLE = {Polymath 14: groups with norms},
@@ -10,6 +60,138 @@ PAGES = {127--136},
 ISSN = {0025-5742},
 MRCLASS = {20-02 (01 20F12 20F65)},
 MRNUMBER = {4676918},
+}
+
+@article {MR4676657,
+    AUTHOR = {Dey, Hiranya Kishore and Mondal, Archita},
+     TITLE = {An exact upper bound for the sum of powers of element orders
+              in non-cyclic finite groups},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {228},
+      YEAR = {2024},
+    NUMBER = {6},
+     PAGES = {Paper No. 107580, 14},
+      ISSN = {0022-4049,1873-1376},
+   MRCLASS = {20D60 (05E16 20E34 20F18)},
+  MRNUMBER = {4676657},
+       DOI = {10.1016/j.jpaa.2023.107580},
+       URL = {https://doi.org/10.1016/j.jpaa.2023.107580},
+}
+
+@incollection {MR4676386,
+    AUTHOR = {Thangavelu, Sundaram},
+     TITLE = {A scalar-valued {F}ourier transform for the {H}eisenberg
+              group},
+ BOOKTITLE = {From classical analysis to analysis on fractals. {V}ol. 1. {A}
+              tribute to {R}obert {S}trichartz},
+    SERIES = {Appl. Numer. Harmon. Anal.},
+     PAGES = {137--163},
+ PUBLISHER = {Birkh\"{a}user/Springer, Cham},
+      YEAR = {[2023] \copyright 2023},
+      ISBN = {978-3-031-37799-0; 978-3-031-37800-3},
+   MRCLASS = {43A80 (33C45 35R03 42C05)},
+  MRNUMBER = {4676386},
+       DOI = {10.1007/978-3-031-37800-3\_7},
+       URL = {https://doi.org/10.1007/978-3-031-37800-3_7},
+}
+
+@article {MR4674153,
+    AUTHOR = {Bhunia, Pintu and Paul, Kallol},
+     TITLE = {{$A$}-numerical radius: new inequalities and characterization
+              of equalities},
+   JOURNAL = {Hacet. J. Math. Stat.},
+  FJOURNAL = {Hacettepe Journal of Mathematics and Statistics},
+    VOLUME = {52},
+      YEAR = {2023},
+    NUMBER = {5},
+     PAGES = {1254--1262},
+      ISSN = {1303-5010,2651-477X},
+   MRCLASS = {47A12 (47A30 47A63)},
+  MRNUMBER = {4674153},
+}
+
+@article {MR4673072,
+    AUTHOR = {Bhimani, Divyang G. and Manna, Ramesh and Nicola, Fabio and
+              Thangavelu, Sundaram and Trapasso, S. Ivan},
+     TITLE = {On heat equations associated with fractional harmonic
+              oscillators},
+   JOURNAL = {Fract. Calc. Appl. Anal.},
+  FJOURNAL = {Fractional Calculus and Applied Analysis. An International
+              Journal for Theory and Applications},
+    VOLUME = {26},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {2470--2492},
+      ISSN = {1311-0454,1314-2224},
+   MRCLASS = {35K05 (35S05 46E30)},
+  MRNUMBER = {4673072},
+       DOI = {10.1007/s13540-023-00208-6},
+       URL = {https://doi.org/10.1007/s13540-023-00208-6},
+}
+
+@article {MR4672688,
+    AUTHOR = {Bhunia, Pintu},
+     TITLE = {Improved bounds for the numerical radius via polar
+              decomposition of operators},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {683},
+      YEAR = {2024},
+     PAGES = {31--45},
+      ISSN = {0024-3795,1873-1856},
+   MRCLASS = {47A12 (15A60 47A30)},
+  MRNUMBER = {4672688},
+       DOI = {10.1016/j.laa.2023.11.021},
+       URL = {https://doi.org/10.1016/j.laa.2023.11.021},
+}
+
+@article {MR4672189,
+    AUTHOR = {Nadimpalli, Santosh and Sheth, Mihir},
+     TITLE = {On the integrality of locally algebraic representations of
+              {${\rm GL}_{2}(D)$}},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {257},
+      YEAR = {2024},
+     PAGES = {124--145},
+      ISSN = {0022-314X,1096-1658},
+   MRCLASS = {11F70 (22E50)},
+  MRNUMBER = {4672189},
+       DOI = {10.1016/j.jnt.2023.10.006},
+       URL = {https://doi.org/10.1016/j.jnt.2023.10.006},
+}
+
+@article {MR4670082,
+    AUTHOR = {Mallik, Gouranga and Gudi, Thirupathi},
+     TITLE = {A hybrid high-order method for a class of strongly nonlinear
+              elliptic boundary value problems},
+   JOURNAL = {J. Sci. Comput.},
+  FJOURNAL = {Journal of Scientific Computing},
+    VOLUME = {98},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {Paper No. 6, 26},
+      ISSN = {0885-7474,1573-7691},
+   MRCLASS = {65N12 (65N15 65N30)},
+  MRNUMBER = {4670082},
+       DOI = {10.1007/s10915-023-02390-4},
+       URL = {https://doi.org/10.1007/s10915-023-02390-4},
+}
+
+@article {MR4669375,
+    AUTHOR = {Sivaram, P.},
+     TITLE = {A note on modified {$J$}-flow with the {C}alabi ansatz},
+   JOURNAL = {Bull. Sci. Math.},
+  FJOURNAL = {Bulletin des Sciences Math\'{e}matiques},
+    VOLUME = {190},
+      YEAR = {2024},
+     PAGES = {Paper No. 103360, 29},
+      ISSN = {0007-4497,1952-4773},
+   MRCLASS = {53E30},
+  MRNUMBER = {4669375},
+       DOI = {10.1016/j.bulsci.2023.103360},
+       URL = {https://doi.org/10.1016/j.bulsci.2023.103360},
 }
 
 @article {MR4667178,
@@ -169,6 +351,23 @@ MRNUMBER = {4676918},
   MRNUMBER = {4658376},
        DOI = {10.1016/j.bulsci.2023.103345},
        URL = {https://doi.org/10.1016/j.bulsci.2023.103345},
+}
+
+@article {MR4658216,
+    AUTHOR = {Ray, Samya Kumar and Sarkar, Srijan},
+     TITLE = {A note on the column-row property},
+   JOURNAL = {Canad. Math. Bull.},
+  FJOURNAL = {Canadian Mathematical Bulletin. Bulletin Canadien de
+              Math\'{e}matiques},
+    VOLUME = {66},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {1244--1254},
+      ISSN = {0008-4395,1496-4287},
+   MRCLASS = {47L25},
+  MRNUMBER = {4658216},
+       DOI = {10.4153/s0008439523000322},
+       URL = {https://doi.org/10.4153/s0008439523000322},
 }
 
 @article {MR4655067,
