corrected publications error

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -88,7 +88,7 @@ MRNUMBER = {4676918},
     SERIES = {Appl. Numer. Harmon. Anal.},
      PAGES = {137--163},
  PUBLISHER = {Birkh\"{a}user/Springer, Cham},
-      YEAR = {[2023] \copyright 2023},
+      YEAR = {2023},
       ISBN = {978-3-031-37799-0; 978-3-031-37800-3},
    MRCLASS = {43A80 (33C45 35R03 42C05)},
   MRNUMBER = {4676386},
