--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,121 @@
+@article {MR4694345,
+    AUTHOR = {Shakya, Pratibha},
+     TITLE = {Error analysis for the finite element approximations of
+              {D}irichlet parabolic boundary control problem with measure
+              data},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {534},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {Paper No. 128109, 29},
+      ISSN = {0022-247X,1096-0813},
+   MRCLASS = {65M12 (35K20 49J20 49M41 65M60)},
+  MRNUMBER = {4694345},
+       DOI = {10.1016/j.jmaa.2024.128109},
+       URL = {https://doi.org/10.1016/j.jmaa.2024.128109},
+}
+
+@article {MR4687384,
+    AUTHOR = {Balodi, Mamta and Banerjee, Abhishek and Kour, Surjeet},
+     TITLE = {Comodule theories in {G}rothendieck categories and relative
+              {H}opf objects},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {228},
+      YEAR = {2024},
+    NUMBER = {6},
+     PAGES = {Paper No. 107607, 32},
+      ISSN = {0022-4049,1873-1376},
+   MRCLASS = {16T05 (16T15 18E10 18E40)},
+  MRNUMBER = {4687384},
+       DOI = {10.1016/j.jpaa.2024.107607},
+       URL = {https://doi.org/10.1016/j.jpaa.2024.107607},
+}
+
+@article {MR4686869,
+    AUTHOR = {Demangos, Luca and Longhi, Ignazio},
+     TITLE = {Densities on {D}edekind domains, completions and {H}aar
+              measure},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {306},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {Paper No. 21, 52},
+      ISSN = {0025-5874,1432-1823},
+   MRCLASS = {11B05 (11R04 13F05)},
+  MRNUMBER = {4686869},
+       DOI = {10.1007/s00209-023-03415-2},
+       URL = {https://doi.org/10.1007/s00209-023-03415-2},
+}
+
+@article {MR4685883,
+    AUTHOR = {Banerjee, Abhishek and Das, Subhajit},
+     TITLE = {Heavily separable functors of the second kind and
+              applications},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {643},
+      YEAR = {2024},
+     PAGES = {49--75},
+      ISSN = {0021-8693,1090-266X},
+   MRCLASS = {16D90 (18A40 18C20)},
+  MRNUMBER = {4685883},
+       DOI = {10.1016/j.jalgebra.2023.12.022},
+       URL = {https://doi.org/10.1016/j.jalgebra.2023.12.022},
+}
+
+@article {MR4685731,
+    AUTHOR = {Bhowmik, Mithun and Ray, Swagato K.},
+     TITLE = {Unique continuation inequalities for {S}chr\"{o}dinger
+              equation on {R}iemannian symmetric spaces of noncompact type},
+   JOURNAL = {Ann. Mat. Pura Appl. (4)},
+  FJOURNAL = {Annali di Matematica Pura ed Applicata. Series IV},
+    VOLUME = {203},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {331--343},
+      ISSN = {0373-3114,1618-1891},
+   MRCLASS = {43A85 (22E30 35B60 35Q41)},
+  MRNUMBER = {4685731},
+       DOI = {10.1007/s10231-023-01365-4},
+       URL = {https://doi.org/10.1007/s10231-023-01365-4},
+}
+
+@article {MR4685101,
+    AUTHOR = {Balodi, Mamta and Banerjee, Abhishek and Ray, Samarpita},
+     TITLE = {Categories of modules, comodules and contramodules over
+              representations},
+   JOURNAL = {Forum Math.},
+  FJOURNAL = {Forum Mathematicum},
+    VOLUME = {36},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {111--152},
+      ISSN = {0933-7741,1435-5337},
+   MRCLASS = {16T15 (18E10)},
+  MRNUMBER = {4685101},
+       DOI = {10.1515/forum-2023-0043},
+       URL = {https://doi.org/10.1515/forum-2023-0043},
+}
+
+@article {MR4684438,
+    AUTHOR = {Cameron, Peter J. and Das, Angsuman and Dey, Hiranya Kishore},
+     TITLE = {On some properties of vector space based graphs},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {71},
+      YEAR = {2023},
+    NUMBER = {17},
+     PAGES = {2858--2868},
+      ISSN = {0308-1087,1563-5139},
+   MRCLASS = {05C25 (05C45 05E18)},
+  MRNUMBER = {4684438},
+       DOI = {10.1080/03081087.2022.2121370},
+       URL = {https://doi.org/10.1080/03081087.2022.2121370},
+}
+
 @article {MR4683610,
     AUTHOR = {Arora, Anita and Ayyer, Arvind},
      TITLE = {The monopole-dimer model on {C}artesian products of plane
@@ -13,6 +131,38 @@
   MRNUMBER = {4683610},
        DOI = {10.5070/c63362786},
        URL = {https://doi.org/10.5070/c63362786},
+}
+
+@article {MR4681348,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Entwined modules over representations of categories},
+   JOURNAL = {Algebr. Represent. Theory},
+  FJOURNAL = {Algebras and Representation Theory},
+    VOLUME = {26},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {3185--3221},
+      ISSN = {1386-923X,1572-9079},
+   MRCLASS = {18E05 (16T15 18E10)},
+  MRNUMBER = {4681348},
+       DOI = {10.1007/s10468-023-10203-3},
+       URL = {https://doi.org/10.1007/s10468-023-10203-3},
+}
+
+@article {MR4681344,
+    AUTHOR = {Mishra, Ashish and Paul, Digjoy and Singla, Pooja},
+     TITLE = {On quasi {S}teinberg characters of complex reflection groups},
+   JOURNAL = {Algebr. Represent. Theory},
+  FJOURNAL = {Algebras and Representation Theory},
+    VOLUME = {26},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {3101--3118},
+      ISSN = {1386-923X,1572-9079},
+   MRCLASS = {20C15 (05E16 20F55)},
+  MRNUMBER = {4681344},
+       DOI = {10.1007/s10468-023-10201-5},
+       URL = {https://doi.org/10.1007/s10468-023-10201-5},
 }
 
 @article {MR4676938,
