--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,89 @@
+@article {MR4707768,
+    AUTHOR = {Ayyer, Arvind and Sinha, Shubham},
+     TITLE = {Cores of partitions in rectangles},
+   JOURNAL = {Electron. J. Combin.},
+  FJOURNAL = {Electronic Journal of Combinatorics},
+    VOLUME = {31},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {Paper No. 1.47, 14},
+      ISSN = {1077-8926},
+   MRCLASS = {05A17 (05A15 05A16 60C05)},
+  MRNUMBER = {4707768},
+       DOI = {10.37236/12022},
+       URL = {https://doi.org/10.37236/12022},
+}
+
+@article {MR4704736,
+    AUTHOR = {Gehlawat, Sahil and Verma, Kaushal},
+     TITLE = {Regularity of the leafwise {P}oincar\'{e} metric on singular
+              holomorphic foliations},
+   JOURNAL = {J. Geom. Anal.},
+  FJOURNAL = {Journal of Geometric Analysis},
+    VOLUME = {34},
+      YEAR = {2024},
+    NUMBER = {4},
+     PAGES = {Paper No. 97, 18},
+      ISSN = {1050-6926,1559-002X},
+   MRCLASS = {32M25 (30F45 32S65 37F75)},
+  MRNUMBER = {4704736},
+       DOI = {10.1007/s12220-024-01547-3},
+       URL = {https://doi.org/10.1007/s12220-024-01547-3},
+}
+
+@article {MR4703355,
+    AUTHOR = {Krishnapur, Manjunath and Lundberg, Erik and Ramachandran,
+              Koushik},
+     TITLE = {Inradius of random lemniscates},
+   JOURNAL = {J. Approx. Theory},
+  FJOURNAL = {Journal of Approximation Theory},
+    VOLUME = {299},
+      YEAR = {2024},
+     PAGES = {Paper No. 106018, 25},
+      ISSN = {0021-9045,1096-0430},
+   MRCLASS = {30C10 (31A15 60G60)},
+  MRNUMBER = {4703355},
+       DOI = {10.1016/j.jat.2024.106018},
+       URL = {https://doi.org/10.1016/j.jat.2024.106018},
+}
+
+@incollection {MR4697461,
+    AUTHOR = {Bhattacharyya, Tirthankar and Rastogi, Shubham and Vijaya
+              Kumar, U.},
+     TITLE = {The joint spectrum for a commuting pair of isometries in
+              certain cases},
+ BOOKTITLE = {Multivariable operator theory---the {J}\"{o}rg {E}schmeier
+              memorial volume},
+     PAGES = {155--193},
+      NOTE = {Reprint of [4454395]},
+ PUBLISHER = {Birkh\"{a}user/Springer, Cham},
+      YEAR = {[2023] \copyright 2023},
+      ISBN = {978-3-031-50534-8},
+   MRCLASS = {47A13 (47A45 47A56)},
+  MRNUMBER = {4697461},
+       DOI = {10.1007/978-3-031-50535-5\_7},
+       URL = {https://doi.org/10.1007/978-3-031-50535-5_7},
+}
+
+@article {MR4696181,
+    AUTHOR = {Ghosh, Mrinal K. and Golui, Subrata and Pal, Chandan and
+              Pradhan, Somnath},
+     TITLE = {Zero-sum stochastic games in continuous-time with
+              risk-sensitive average cost criterion on a countable state
+              space},
+   JOURNAL = {Math. Control Relat. Fields},
+  FJOURNAL = {Mathematical Control and Related Fields},
+    VOLUME = {14},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {255--283},
+      ISSN = {2156-8472,2156-8499},
+   MRCLASS = {91A15 (60J27 91A25)},
+  MRNUMBER = {4696181},
+       DOI = {10.3934/mcrf.2023003},
+       URL = {https://doi.org/10.3934/mcrf.2023003},
+}
+
 @article {MR4694345,
     AUTHOR = {Shakya, Pratibha},
      TITLE = {Error analysis for the finite element approximations of
@@ -14,6 +100,41 @@
   MRNUMBER = {4694345},
        DOI = {10.1016/j.jmaa.2024.128109},
        URL = {https://doi.org/10.1016/j.jmaa.2024.128109},
+}
+
+@article {MR4693600,
+    AUTHOR = {Mazur, Barry and Lichtenbaum, Stephen and Wiles, Andrew and
+              Schneps, Leila and Sujatha and Kakde, Mahesh},
+     TITLE = {John {C}oates (1945--2022): celebration of a life},
+   JOURNAL = {Notices Amer. Math. Soc.},
+  FJOURNAL = {Notices of the American Mathematical Society},
+    VOLUME = {71},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {46--56},
+      ISSN = {0002-9920,1088-9477},
+   MRCLASS = {01A70 (11-03)},
+  MRNUMBER = {4693600},
+       DOI = {10.1090/noti2844},
+       URL = {https://doi.org/10.1090/noti2844},
+}
+
+@article {MR4689556,
+    AUTHOR = {Alpay, Daniel and Bhattacharyya, Tirthankar and Jindal, Abhay
+              and Kumar, Poornendu},
+     TITLE = {A dilation theoretic approach to approximation by inner
+              functions},
+   JOURNAL = {Bull. Lond. Math. Soc.},
+  FJOURNAL = {Bulletin of the London Mathematical Society},
+    VOLUME = {55},
+      YEAR = {2023},
+    NUMBER = {6},
+     PAGES = {2840--2855},
+      ISSN = {0024-6093,1469-2120},
+   MRCLASS = {47A20 (30H50 32A37 47A56 93B28)},
+  MRNUMBER = {4689556},
+       DOI = {10.1112/blms.12897},
+       URL = {https://doi.org/10.1112/blms.12897},
 }
 
 @article {MR4687384,
@@ -133,6 +254,22 @@
        URL = {https://doi.org/10.5070/c63362786},
 }
 
+@article {MR4683314,
+    AUTHOR = {Das, Sumanta and Gadgil, Siddhartha},
+     TITLE = {Surfaces of infinite-type are non-{H}opfian},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'{e}matique. Acad\'{e}mie des Sciences.
+              Paris},
+    VOLUME = {361},
+      YEAR = {2023},
+     PAGES = {1349--1356},
+      ISSN = {1631-073X,1778-3569},
+   MRCLASS = {57K20 (55S37)},
+  MRNUMBER = {4683314},
+       DOI = {10.5802/crmath.504},
+       URL = {https://doi.org/10.5802/crmath.504},
+}
+
 @article {MR4681348,
     AUTHOR = {Banerjee, Abhishek},
      TITLE = {Entwined modules over representations of categories},
@@ -163,6 +300,19 @@
   MRNUMBER = {4681344},
        DOI = {10.1007/s10468-023-10201-5},
        URL = {https://doi.org/10.1007/s10468-023-10201-5},
+}
+
+@incollection {MR4680300,
+    AUTHOR = {Dasgupta, Samit and Kakde, Mahesh},
+     TITLE = {On the {B}rumer-{S}tark conjecture and refinements},
+ BOOKTITLE = {I{CM}---{I}nternational {C}ongress of {M}athematicians. {V}ol.
+              {III}. {S}ections 1--4},
+     PAGES = {1768--1799},
+ PUBLISHER = {EMS Press, Berlin},
+      YEAR = {[2023] \copyright 2023},
+      ISBN = {978-3-98547-061-7; 978-3-98547-561-2; 978-3-98547-058-7},
+   MRCLASS = {11R37 (11R42)},
+  MRNUMBER = {4680300},
 }
 
 @article {MR4676938,
