Course catalogue - change in appearance
Following Prof. Muna Naik's request

--- a/_all-courses/ma305.md
+++ b/_all-courses/ma305.md
@@ -25,8 +25,6 @@ books:
 - author: D. Bump
   title: Lie groups
   publ: Springer
-prereqs:
-  Basic knowledge of Differential Geometry and Algebraic topology
 
 ---
 Lie groups, definition and examples, Invariant vector fields and the exponential map, The Lie algebra
@@ -37,4 +35,6 @@ transformation Groups, Coset Spaces and homogeneous spaces, Complexification, Cl
 and their examples (Linear groups, Orthogonal Groups, Unitary Groups, Compact symplectic groups,
 Non-compact symplectic group). Topological properties and fundamental groups of classical Lie groups,
 The Killing form, Nilpotent and Solvable Lie algebras, Semisimple Lie algebras, Compact Lie algebras
+
+prerequisite: Basic knowledge of Differential Geometry and Algebraic topology
 
