--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,138 @@
+@article {MR4722460,
+    AUTHOR = {Bhunia, Pintu and Sen, Anirban and Paul, Kallol},
+     TITLE = {Generalized {C}artesian decomposition and numerical radius
+              inequalities},
+   JOURNAL = {Rend. Circ. Mat. Palermo (2)},
+  FJOURNAL = {Rendiconti del Circolo Matematico di Palermo. Second Series},
+    VOLUME = {73},
+      YEAR = {2024},
+    NUMBER = {3},
+     PAGES = {887--897},
+      ISSN = {0009-725X,1973-4409},
+   MRCLASS = {47A12 (15A60 47A30)},
+  MRNUMBER = {4722460},
+       DOI = {10.1007/s12215-023-00958-5},
+       URL = {https://doi.org/10.1007/s12215-023-00958-5},
+}
+
+@article {MR4716340,
+    AUTHOR = {Bhamidi, Shankar and Sen, Sanchayan},
+     TITLE = {Geometry of the minimal spanning tree in the heavy-tailed
+              regime: new universality classes},
+   JOURNAL = {Probab. Theory Related Fields},
+  FJOURNAL = {Probability Theory and Related Fields},
+    VOLUME = {188},
+      YEAR = {2024},
+    NUMBER = {3-4},
+     PAGES = {729--804},
+      ISSN = {0178-8051,1432-2064},
+   MRCLASS = {60C05 (05C80)},
+  MRNUMBER = {4716340},
+       DOI = {10.1007/s00440-024-01259-3},
+       URL = {https://doi.org/10.1007/s00440-024-01259-3},
+}
+
+@article {MR4715437,
+    AUTHOR = {Monsurr\`o, S. and Nandakumaran, A. K. and Perugia, C.},
+     TITLE = {A note on the exact boundary controllability for an imperfect
+              transmission problem},
+   JOURNAL = {Ric. Mat.},
+  FJOURNAL = {Ricerche di Matematica. A Journal of Pure and Applied
+              Mathematics},
+    VOLUME = {73},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {547--564},
+      ISSN = {0035-5038,1827-3491},
+   MRCLASS = {93B05 (35B27 35L20 35Q93 93C20)},
+  MRNUMBER = {4715437},
+       DOI = {10.1007/s11587-021-00625-w},
+       URL = {https://doi.org/10.1007/s11587-021-00625-w},
+}
+
+@article {MR4713801,
+    AUTHOR = {Nandakumaran, A. K. and Sufian, Abu and Thazhathethil,
+              Renjith},
+     TITLE = {Homogenization of semi-linear optimal control problems on
+              oscillating domains with matrix coefficients},
+   JOURNAL = {Appl. Math. Optim.},
+  FJOURNAL = {Applied Mathematics and Optimization},
+    VOLUME = {89},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {Paper No. 46, 42},
+      ISSN = {0095-4616,1432-0606},
+   MRCLASS = {49J20 (35B27 35J25 49J45)},
+  MRNUMBER = {4713801},
+       DOI = {10.1007/s00245-024-10113-w},
+       URL = {https://doi.org/10.1007/s00245-024-10113-w},
+}
+
+@article {MR4711904,
+    AUTHOR = {Kumari, Nishu},
+     TITLE = {A short combinatorial proof of dimension identities of
+              {E}rickson and {H}unziker},
+   JOURNAL = {J. Combin. Theory Ser. A},
+  FJOURNAL = {Journal of Combinatorial Theory. Series A},
+    VOLUME = {205},
+      YEAR = {2024},
+     PAGES = {Paper No. 105883, 13},
+      ISSN = {0097-3165,1096-0899},
+   MRCLASS = {05A17 (05A19)},
+  MRNUMBER = {4711904},
+       DOI = {10.1016/j.jcta.2024.105883},
+       URL = {https://doi.org/10.1016/j.jcta.2024.105883},
+}
+
+@article {MR4710875,
+    AUTHOR = {Banerjee, Abhishek and Kour, Surjeet},
+     TITLE = {Measurings of {H}opf algebroids and morphisms in cyclic
+              (co)homology theories},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {442},
+      YEAR = {2024},
+     PAGES = {Paper No. 109581, 48},
+      ISSN = {0001-8708,1090-2082},
+   MRCLASS = {16T15 (16E40 18M65)},
+  MRNUMBER = {4710875},
+       DOI = {10.1016/j.aim.2024.109581},
+       URL = {https://doi.org/10.1016/j.aim.2024.109581},
+}
+
+@article {MR4710860,
+    AUTHOR = {Hatui, Sumana and Narayanan, E. K. and Singla, Pooja},
+     TITLE = {Projective representations of {H}eisenberg groups over the
+              rings of order {$p^2$}},
+   JOURNAL = {J. Group Theory},
+  FJOURNAL = {Journal of Group Theory},
+    VOLUME = {27},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {413--442},
+      ISSN = {1433-5883,1435-4446},
+   MRCLASS = {20C25 (20F18 20G05)},
+  MRNUMBER = {4710860},
+       DOI = {10.1515/jgth-2022-0033},
+       URL = {https://doi.org/10.1515/jgth-2022-0033},
+}
+
+@article {MR4710653,
+    AUTHOR = {Guesba, Messaoud and Bhunia, Pintu and Paul, Kallol},
+     TITLE = {{$A$}-numerical radius of semi-{H}ilbert space operators},
+   JOURNAL = {J. Convex Anal.},
+  FJOURNAL = {Journal of Convex Analysis},
+    VOLUME = {31},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {227--242},
+      ISSN = {0944-6532,2363-6394},
+   MRCLASS = {47A12 (47A05 47A30 47B15)},
+  MRNUMBER = {4710653},
+       DOI = {10.7153/oam-2024-18-06},
+       URL = {https://doi.org/10.7153/oam-2024-18-06},
+}
+
 @article {MR4707768,
     AUTHOR = {Ayyer, Arvind and Sinha, Shubham},
      TITLE = {Cores of partitions in rectangles},
@@ -12,6 +147,24 @@
   MRNUMBER = {4707768},
        DOI = {10.37236/12022},
        URL = {https://doi.org/10.37236/12022},
+}
+
+@article {MR4707363,
+    AUTHOR = {Bhunia, Pintu and Ipek Al, Pembe and Ismailov, Zameddin I.},
+     TITLE = {On the convergence of some spectral characteristics of the
+              converging operator sequences},
+   JOURNAL = {Proc. Indian Acad. Sci. Math. Sci.},
+  FJOURNAL = {Indian Academy of Sciences. Proceedings. Mathematical
+              Sciences},
+    VOLUME = {134},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {Paper No. 4, 15},
+      ISSN = {0253-4142,0973-7685},
+   MRCLASS = {47A12 (47A05 47A10 47A30)},
+  MRNUMBER = {4707363},
+       DOI = {10.1007/s12044-023-00770-2},
+       URL = {https://doi.org/10.1007/s12044-023-00770-2},
 }
 
 @article {MR4704736,
