--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,135 @@
+@article {MR4740662,
+    AUTHOR = {Kar, Debaprasanna},
+     TITLE = {Weighted boundary limits of the {K}obayashi--{F}uks metric on
+              h-extendible domains},
+   JOURNAL = {Anal. Math.},
+  FJOURNAL = {Analysis Mathematica},
+    VOLUME = {50},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {215--233},
+      ISSN = {0133-3852,1588-273X},
+   MRCLASS = {32F45 (32A25 32A36)},
+  MRNUMBER = {4740662},
+       DOI = {10.1007/s10476-024-00013-0},
+       URL = {https://doi.org/10.1007/s10476-024-00013-0},
+}
+
+@article {MR4732912,
+    AUTHOR = {Banik, Annapurna},
+     TITLE = {Local continuous extension of proper holomorphic maps:
+              low-regularity and infinite-type boundaries},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {537},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {Paper No. 128382, 22},
+      ISSN = {0022-247X,1096-0813},
+   MRCLASS = {32H35 (32F45)},
+  MRNUMBER = {4732912},
+       DOI = {10.1016/j.jmaa.2024.128382},
+       URL = {https://doi.org/10.1016/j.jmaa.2024.128382},
+}
+
+@article {MR4732760,
+    AUTHOR = {Kumar, Manoj},
+     TITLE = {Pego theorem on compact groups},
+   JOURNAL = {Pacific J. Math.},
+  FJOURNAL = {Pacific Journal of Mathematics},
+    VOLUME = {328},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {137--143},
+      ISSN = {0030-8730,1945-5844},
+   MRCLASS = {43A30 (22C05 43A77)},
+  MRNUMBER = {4732760},
+       DOI = {10.2140/pjm.2024.328.137},
+       URL = {https://doi.org/10.2140/pjm.2024.328.137},
+}
+
+@article {MR4732644,
+    AUTHOR = {Gupta, Rahul and Krishna, Amalendu and Rathore, Jitendra},
+     TITLE = {A decomposition theorem for 0-cycles and applications},
+   JOURNAL = {Ann. Sc. Norm. Super. Pisa Cl. Sci. (5)},
+  FJOURNAL = {Annali della Scuola Normale Superiore di Pisa. Classe di
+              Scienze. Serie V},
+    VOLUME = {25},
+      YEAR = {2024},
+    NUMBER = {1},
+     PAGES = {449--482},
+      ISSN = {0391-173X,2036-2145},
+   MRCLASS = {14C25 (14F42 19E15)},
+  MRNUMBER = {4732644},
+       DOI = {10.2422/2036-2145.20211\_018},
+       URL = {https://doi.org/10.2422/2036-2145.20211_018},
+}
+
+@article {MR4732295,
+    AUTHOR = {Bhunia, Pintu and Mal, Arpita},
+     TITLE = {Norm inequalities in {$\Cal L(\Cal X)$} and a geometric
+              constant},
+   JOURNAL = {Banach J. Math. Anal.},
+  FJOURNAL = {Banach Journal of Mathematical Analysis},
+    VOLUME = {18},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {Paper No. 31, 19},
+      ISSN = {2662-2033,1735-8787},
+   MRCLASS = {47A30 (46B20 47A12 47L05)},
+  MRNUMBER = {4732295},
+       DOI = {10.1007/s43037-024-00342-0},
+       URL = {https://doi.org/10.1007/s43037-024-00342-0},
+}
+
+@article {MR4728730,
+    AUTHOR = {Das, Soumya and Krishna, Hariram},
+     TITLE = {Bounds for the {B}ergman kernel and the sup-norm of
+              holomorphic {S}iegel cusp forms},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2024},
+    NUMBER = {7},
+     PAGES = {6140--6175},
+      ISSN = {1073-7928,1687-0247},
+   MRCLASS = {32N10 (11F46 32A25)},
+  MRNUMBER = {4728730},
+       DOI = {10.1093/imrn/rnad322},
+       URL = {https://doi.org/10.1093/imrn/rnad322},
+}
+
+@article {MR4728466,
+    AUTHOR = {Biswas, Indranil and Pingali, Vamsi Pritham},
+     TITLE = {Criteria for the ampleness of certain vector bundles},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {152},
+      YEAR = {2024},
+    NUMBER = {5},
+     PAGES = {1961--1968},
+      ISSN = {0002-9939,1088-6826},
+   MRCLASS = {14J60 (14F17 32L10)},
+  MRNUMBER = {4728466},
+       DOI = {10.1090/proc/16721},
+       URL = {https://doi.org/10.1090/proc/16721},
+}
+
+@article {MR4724769,
+    AUTHOR = {Jana, Suvendu and Bhunia, Pintu and Paul, Kallol},
+     TITLE = {Refinements of generalized {E}uclidean operator radius
+              inequalities of 2-tuple operators},
+   JOURNAL = {Filomat},
+  FJOURNAL = {Univerzitet u Ni\v{s}u. Prirodno-Matemati\v{c}ki Fakultet.
+              Filomat},
+    VOLUME = {38},
+      YEAR = {2024},
+    NUMBER = {8},
+     PAGES = {2587--2599},
+      ISSN = {0354-5180,2406-0933},
+   MRCLASS = {47A12 (47A30 47A50)},
+  MRNUMBER = {4724769},
+}
+
 @article {MR4722460,
     AUTHOR = {Bhunia, Pintu and Sen, Anirban and Paul, Kallol},
      TITLE = {Generalized {C}artesian decomposition and numerical radius
@@ -13,6 +145,24 @@
   MRNUMBER = {4722460},
        DOI = {10.1007/s12215-023-00958-5},
        URL = {https://doi.org/10.1007/s12215-023-00958-5},
+}
+
+@article {MR4719156,
+    AUTHOR = {Deo, Shaunak V.},
+     TITLE = {The {E}isenstein ideal of weight {$k$} and ranks of {H}ecke
+              algebras},
+   JOURNAL = {J. Inst. Math. Jussieu},
+  FJOURNAL = {Journal of the Institute of Mathematics of Jussieu. JIMJ.
+              Journal de l'Institut de Math\'{e}matiques de Jussieu},
+    VOLUME = {23},
+      YEAR = {2024},
+    NUMBER = {2},
+     PAGES = {983--1017},
+      ISSN = {1474-7480,1475-3030},
+   MRCLASS = {11F80 (11F25 11F33)},
+  MRNUMBER = {4719156},
+       DOI = {10.1017/S1474748023000129},
+       URL = {https://doi.org/10.1017/S1474748023000129},
 }
 
 @article {MR4716340,
